--- a/src/App.scss
+++ b/src/App.scss
@@ -16,7 +16,7 @@ body {
 justify-content: center;
 align-items: center;
 height: 100%;
-background-color: #1e555c;
+background-color: #56d9eb;
 font-family: 'Times New Roman', Times, serif;
 
 
